Bug 360743 - Krita attempts to open a wrong path for the resource folder
Summary: Krita attempts to open a wrong path for the resource folder
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 3.0 Alpha
Platform: unspecified Linux
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-19 17:25 UTC by omiya
Modified: 2016-04-05 10:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description omiya 2016-03-19 17:25:02 UTC
File browser doesn't open when I clicked on 'Open Resource Folder' in 'Manage Resource Bundles' window (Settings -> Manage Resources...), but I get an error saying Krita failed to open <$HOME/.local/share/krita/krita/krita>.

Reproducible: Always
Comment 1 Halla Rempt 2016-03-19 19:03:04 UTC
Hi,

Yes, I can confirm this bug. There's a patch on phabricator that we should test for this issue.

gvfs-open: file:///home/boud/dev/i/local5/share/krita/krita/krita: error opening location: Error when getting information for file '/home/boud/dev/i/local5/share/krita/krita/krita': No such file or directory
Comment 2 Raghavendra kamath 2016-03-22 18:25:52 UTC
This is the phabricator task for this bug -> https://phabricator.kde.org/T1464.
Comment 3 Halla Rempt 2016-03-31 11:24:32 UTC
Git commit bdc98ad689424c0a3f7c7b09331cb08dc0f71531 by Boudewijn Rempt.
Committed on 31/03/2016 at 11:24.
Pushed by rempt into branch 'master'.

Fixes T1464

M  +1    -1    libs/ui/KisViewManager.cpp
M  +5    -1    libs/widgetutils/KoResourcePaths.cpp

http://commits.kde.org/krita/bdc98ad689424c0a3f7c7b09331cb08dc0f71531
Comment 4 Raghavendra kamath 2016-04-02 11:35:01 UTC
The open resource button in the manage resource section now opens the correct folder on linux,

but there is another thing happening as a side effect the new brush tips are saved in .local/share/krita instead of .local/share/krita/brushes/ thus rendering the brush presets without a brush tip on next restart
Comment 5 Halla Rempt 2016-04-02 14:04:18 UTC
Git commit ca6ce2f233a98ecdad12ee613b046bd02a3ebaf4 by Boudewijn Rempt.
Committed on 02/04/2016 at 14:03.
Pushed by rempt into branch 'master'.

Add the suffix to the save location where needed
Related: bug 361155

M  +4    -1    libs/widgetutils/KoResourcePaths.cpp

http://commits.kde.org/krita/ca6ce2f233a98ecdad12ee613b046bd02a3ebaf4
Comment 6 Halla Rempt 2016-04-05 10:50:16 UTC
Git commit 324badefbc79844d35be0d74f999d7c6582ad677 by Boudewijn Rempt.
Committed on 05/04/2016 at 10:49.
Pushed by rempt into branch 'rempt-osx-port'.

Add the suffix to the save location where needed
Related: bug 361155

M  +4    -1    libs/widgetutils/KoResourcePaths.cpp

http://commits.kde.org/krita/324badefbc79844d35be0d74f999d7c6582ad677