Add the suffix to the save location where needed

BUG:360743
BUG:361155